--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -1,17 +1,19 @@
-@Article{Gevaert2003,
-  author  = {Gevaert, S. A. and Vandekerckhove, J.},
-  title   = {Protein identification methods in proteomics},
-  journal = {Protein Science},
-  year    = {2003},
-  volume  = {12},
-  number  = {9},
-  pages   = {1913--1925},
-  doi     = {10.1110/ps.0309203}
+@Article{Gevaert2000,
+  author    = {Gevaert, Kris and Vandekerckhove, Joël},
+  title     = {Protein identification methods in proteomics},
+  journal   = {Electrophoresis},
+  year      = {2000},
+  volume    = {21},
+  number    = {6},
+  pages     = {1145--1154},
+  doi       = {10.1002/(SICI)1522-2683(20000401)21:6<1145::AID-ELPS1145>3.0.CO;2-Z},
+  pmid      = {10786887}
 }
+
 
 @Article{Aebersold2016,
   author  = {Aebersold, R. and Mann, M.},
-  title   = {Mass-spectrometry-based proteomics},
+  title   = {Mass-spectrometric exploration of proteome structure and function},
   journal = {Nature},
   year    = {2016},
   volume  = {537},
@@ -30,25 +32,28 @@
   pages   = {699--711},
   doi     = {10.1038/nrm1468}
 }
-
-@Article{Roepstorff2010,
-  author  = {Roepstorff, R.},
-  title   = {All beginnings are easy: The early steps of peptide fragmentation},
-  journal = {Journal of the American Society for Mass Spectrometry},
-  year    = {2010},
-  volume  = {21},
-  number  = {7},
-  pages   = {1085--1090},
-  doi     = {10.1016/j.jasms.2010.04.001}
+@Article{Roepstorff1984,
+  author  = {Roepstorff, P. and Fohlman, J.},
+  title   = {Proposal for a common nomenclature for sequence ions in mass spectra of peptides},
+  journal = {Biomedical Mass Spectrometry},
+  year    = {1984},
+  volume  = {11},
+  number  = {11},
+  pages   = {601},
+  doi     = {10.1002/bms.1200111109},
+  url     = {https://pubmed.ncbi.nlm.nih.gov/6525415/#:~:text=Proposal%20for%20a%20common%20nomenclature%20for%20sequence,peptides%20*%20PMID:%206525415.%20*%20DOI:%2010.1002/bms.1200111109.},
+  pmid    = {6525415}
 }
 
-@Article{Zeng2024,
-  author  = {Zeng, W. and others},
-  title   = {PROSPECT-MultiPTM: A large-scale dataset for machine learning in proteomics},
-  journal = {Advances in Neural Information Processing Systems},
-  year    = {2024},
-  note    = {NeurIPS Datasets and Benchmarks Track}
+@inproceedings{Zeng2024,
+author = {Gabriel, Wassim and Shouman, Omar and Schroeder, Ayla and Boessl, Florian and Wilhelm, Mathias},
+year = {2025},
+month = {01},
+pages = {},
+title = {PROSPECT PTMs: Rich Labeled Tandem Mass Spectrometry Dataset of Modified Peptides for Machine Learning in Proteomics},
+doi = {10.52202/079017-4168}
 }
+
 
 @Article{Zolg2017,
   author  = {Zolg, D. P. and others},
@@ -72,15 +77,16 @@
   doi     = {10.1093/nar/gkab1038}
 }
 
-@Article{Leis2022,
-  author  = {Leis, J. P. and others},
-  title   = {ProForma 2.0: Unifying the encoding of modified proteins and peptides},
+@Article{LeDuc2022,
+  author  = {LeDuc, Richard D. and others},
+  title   = {Proteomics Standards Initiative's ProForma 2.0: Unifying the Encoding of Proteoforms and Peptidoforms},
   journal = {Journal of Proteome Research},
   year    = {2022},
   volume  = {21},
-  number  = {5},
-  pages   = {1245--1253},
-  doi     = {10.1021/acs.jproteome.1c00914}
+  number  = {4},
+  pages   = {1189--1195},
+  doi     = {10.1021/acs.jproteome.1c00771},
+  note    = {PMID: 35290070}
 }
 
 
@@ -117,16 +123,19 @@
   doi     = {10.1016/j.jprot.2010.08.009}
 }
 
-@Article{Taylor1997,
-  author  = {Taylor, J. A. and Johnson, R. S.},
-  title   = {Sequence databases: a new iterative method for predicting amino acid sequences from tandem mass spectra},
-  journal = {Rapid Communications in Mass Spectrometry},
-  year    = {1997},
-  volume  = {11},
-  number  = {10},
-  pages   = {1067--1075},
-  doi     = {10.1002/(SICI)1097-0231(19970630)11:10<1067::AID-RCM946>3.0.CO;2-9}
+@Article{Edwards2007,
+  author  = {Edwards, N. J.},
+  title   = {Novel peptide identification from tandem mass spectra using {ESTs} and sequence database compression},
+  journal = {Molecular Systems Biology},
+  year    = {2007},
+  volume  = {3},
+  pages   = {102},
+  doi     = {10.1038/msb4100142},
+  url     = {https://www.embopress.org/doi/full/10.1038/msb4100142},
+  pmid    = {17437027},
+  pmcid   = {PMC1865584}
 }
+
 
 @Article{Tran2019,
   author  = {Tran, N. H. and Qiao, R. and others},
@@ -150,16 +159,6 @@
   doi     = {10.1021/ac0262560}
 }
 
-@Article{Werner2014,
-  author  = {Werner, T. and Becher, I. and others},
-  title   = {High-resolution sampled 10-plex TMT for proteomics},
-  journal = {Analytical Chemistry},
-  year    = {2014},
-  volume  = {86},
-  number  = {14},
-  pages   = {7025--7031},
-  doi     = {10.1021/ac501510y}
-}
 
 @Article{McAlister2014,
   author  = {McAlister, G. C. and Nusinow, D. P. and others},
@@ -171,26 +170,30 @@
   pages   = {7150--7158},
   doi     = {10.1021/ac502040v}
 }
-
-@Article{Hogrebe2018,
-  author  = {Hogrebe, J. P. and von Hagel, C. F. and others},
-  title   = {The impact of TMT labeling on the fragmentation of peptides},
-  journal = {Journal of Proteomics},
+@Article{Shen2018,
+  author  = {Shen, J. and Pagala, V. R. and Breuer, A. M. and Peng, J. and Ma, B. and Wang, X.},
+  title   = {Spectral Library Search Improves Assignment of TMT Labeled MS/MS Spectra},
+  journal = {Journal of Proteome Research},
   year    = {2018},
-  volume  = {175},
-  pages   = {130--139},
-  doi     = {10.1016/j.jprot.2017.11.012}
+  volume  = {17},
+  number  = {9},
+  pages   = {3325--3331},
+  doi     = {10.1021/acs.jproteome.8b00594},
+  note    = {Epub 2018 Aug 16. PMID: 30096983; PMCID: PMC6390480}
 }
 
 @Article{Rauniyar2014,
-  author  = {Rauniyar, N. and Yates, J. R.},
+  author  = {Rauniyar, N. and Yates, 3rd, J. R.},
   title   = {Isobaric labeling-based relative quantification in shotgun proteomics},
   journal = {Journal of Proteome Research},
   year    = {2014},
   volume  = {13},
   number  = {12},
   pages   = {5293--5309},
-  doi     = {10.1021/pr500827s}
+  doi     = {10.1021/pr500880b},
+  url     = {https://pubs.acs.org/doi/10.1021/pr500880b},
+  pmid    = {25337643},
+  pmcid   = {PMC4261935}
 }
 
 @Article{Budnik2018,
@@ -204,35 +207,32 @@
 }
 
 
-@InProceedings{Vaswani2017,
-  author    = {Vaswani, A. and Shazeer, N. and others},
-  title     = {Attention is all you need},
-  booktitle = {Advances in Neural Information Processing Systems},
-  year      = {2017},
-  volume    = {30}
+
+
+@article{Vaswani2017,
+author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
+title = {Attention is All you Need},
+journal = {Advances in Neural Information Processing Systems},
+year = {2017},
+volume = {30},
+doi     = {10.48550/arXiv.1706.03762},
+url = {https://arxiv.org/abs/1706.03762}
 }
 
-@Article{Yilmaz2023,
-  author  = {Yilmaz, M. and Fondrie, W. and others},
-  title   = {De novo peptide sequencing with deep learning},
-  journal = {Nature Methods},
-  year    = {2023},
-  volume  = {20},
-  number  = {2},
-  pages   = {276--282},
-  doi     = {10.1038/s41592-022-01712-9}
-}
 
 
 @Article{Tran2017,
-  author  = {Tran, N. H. and Zhang, X. and Shan, L. and others},
+  author  = {Tran, N. H. and Zhang, X. and Xin, L. and Shan, B. and Li, M.},
   title   = {De novo peptide sequencing by deep learning},
-  journal = {Proceedings of the National Academy of Sciences (PNAS)},
+  journal = {Proceedings of the National Academy of Sciences of the United States of America},
   year    = {2017},
   volume  = {114},
   number  = {31},
   pages   = {8247--8252},
-  doi     = {10.1073/pnas.1705645114}
+  doi     = {10.1073/pnas.1705691114},
+  url     = {https://www.pnas.org/doi/full/10.1073/pnas.1705691114},
+  pmid    = {28720701},
+  pmcid   = {PMC5547637}
 }
 
 
@@ -265,14 +265,12 @@
 }
 
 
-@Article{Deutsch2012,
-  author  = {Deutsch, E. W.},
-  title   = {The Mascot Generic Format},
-  journal = {Methods in Molecular Biology},
-  year    = {2012},
-  volume  = {909},
-  pages   = {203--212},
-  doi     = {10.1007/978-1-61779-959-4_13}
+@misc{MatrixScienceMGF,
+  author       = {{Matrix Science}},
+  title        = {Mascot Generic Format (MGF) Specification},
+  year         = {2024},
+  url          = {https://www.matrixscience.com/help/data_file_help.html},
+  note         = {Accessed: 2026-02-11}
 }
 
 @Article{Pedregosa2011,
@@ -290,12 +288,8 @@
   booktitle = 	 {Proceedings of the 39th International Conference on Machine Learning},
   pages = 	 {25514--25522},
   year = 	 {2022},
-  editor = 	 {Chaudhuri, Kamalika and Jegelka, Stefanie and Song, Le and Szepesvari, Csaba and Niu, Gang and Sabato, Sivan},
-  volume = 	 {162},
-  series = 	 {Proceedings of Machine Learning Research},
-  month = 	 {17--23 Jul},
-  publisher =    {PMLR},
-  pdf = 	 {https://proceedings.mlr.press/v162/yilmaz22a/yilmaz22a.pdf},
+   volume = 	 {162},
+   doi = 	 {10.1101/2022.02.07.479481},
   url = 	 {https://proceedings.mlr.press/v162/yilmaz22a.html},
   abstract = 	 {Tandem mass spectrometry is the only high-throughput method for analyzing the protein content of complex biological samples and is thus the primary technology driving the growth of the field of proteomics. A key outstanding challenge in this field involves identifying the sequence of amino acids -the peptide- responsible for generating each observed spectrum, without making use of prior knowledge in the form of a peptide sequence database. Although various machine learning methods have been developed to address this de novo sequencing problem, challenges that arise when modeling tandem mass spectra have led to complex models that combine multiple neural networks and post-processing steps. We propose a simple yet powerful method for de novo peptide sequencing, Casanovo, that uses a transformer framework to map directly from a sequence of observed peaks (a mass spectrum) to a sequence of amino acids (a peptide). Our experiments show that Casanovo achieves state-of-the-art performance on a benchmark dataset using a standard cross-species evaluation framework which involves testing with spectra with never-before-seen peptide labels. Casanovo not only achieves superior performance but does so at a fraction of the model complexity and inference time required by other methods.}
 }
@@ -358,26 +352,10 @@
 @Article{Stromberg2019,
   author  = {St{\o}mberg, Mikael J. and Roy, Ram and Lajugie, Jonathan and others},
   title   = {Nirvana: clinical grade variant annotation of genomic error-corrected sequencing data},
-  journal = {Bioinformatics},
-  year    = {2019},
-  volume  = {35},
-  number  = {22},
-  pages   = {4793--4795},
-  doi     = {10.1093/bioinformatics/btz465}
+  url    = {https://hpc.nih.gov/apps/nirvana.html},
+  note = {accessed 2025-12-30}
 }
 
-@Article{Shen2018,
-  author  = {Shen, Jianqiao and Pagala, Vishwajeeth R. and Breuer, Alex M. and Peng, Junmin and Ma, Bin and Wang, Xusheng},
-  title   = {Spectral Library Search Improves Assignment of TMT Labeled MS/MS Spectra},
-  journal = {Journal of Proteome Research},
-  year    = {2018},
-  volume  = {17},
-  number  = {10},
-  pages   = {3527--3536},
-  doi     = {10.1021/acs.jproteome.8b00594},
-  pmid    = {30096983},
-  pmcid   = {PMC6390480}
-}
 
 @Article{Nesvizhskii2014,
   author  = {Nesvizhskii, Alexey I.},
@@ -445,16 +423,6 @@ The identification of these additional sequences suggests that the "dark proteom
   doi     = {10.1038/s41419-022-05005-2}
 }
 
-@Article{Favaro2012,
-  author  = {Favaro, Elena and Bensaad, Karim and Chong, Meng Joanne and Tennant, David A. and Ferguson, Stuart J. and Miess, Christian and Anderson, Ross and Sharma, Ashok and Weiss, Andrea and Hiller, Karsten and M{\'e}nard, Martin and M{\'e}nard, Catherine and Frezza, Christian},
-  title   = {Glucose utilization via glycogen phosphorylase sustains cancer cell survival and proliferation},
-  journal = {Cell Reports},
-  year    = {2012},
-  volume  = {2},
-  number  = {2},
-  pages   = {229--240},
-  doi     = {10.1016/j.celrep.2012.07.010}
-}
 
 @Article{Zhang2022,
   author  = {Zhang, Peng and Shan, Qiang and Gao, Mengya and Hu, Tianyu and Hu, Xiaolu and Wang, Xu and Li, Ying and Wang, Xiaohui and Liu, Jing and Zhang, Li and Zhao, Yanan and Wang, Qian and Li, Wei and Wang, Yili and Zhang, Ying and Li, Xiaoping and Wang, Lei and Li, Xiaoping},
@@ -463,35 +431,30 @@ The identification of these additional sequences suggests that the "dark proteom
   year    = {2022},
   volume  = {29},
   pages   = {1140--1153},
-  doi     = {10.1038/s41418-021-00904-w},
+  doi     = {10.1038/s41419-022-05005-2},
   url     = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9240045/}
 }
 
 
-@Article{Wang2014,
-  author  = {Wang, Xiaomin and Slebos, Robbert J. C. and Wang, Dong and Chen, David and Walker, Larry D. and Massion, Pierre P. and Zhao, Zhongming and Liebler, Daniel C.},
-  title   = {Protein somatic variations and their implications in proteogenomics},
-  journal = {Proteomics},
-  year    = {2014},
-  volume  = {14},
-  number  = {23-24},
-  pages   = {2782--2794},
-  doi     = {10.1002/pmic.201400153}
-}
+
+@article{Wang2024,
+  author = {Wang, Xiaoli and Li, Yuan and Zhang, Jian and others},
+  title = {PYGL regulation of glycolysis and apoptosis in glioma cells under hypoxic conditions via HIF1α-dependent mechanisms},
+  journal = {Translational Cancer Research},
+  volume = {13},
+  number = {10},
+  pages = {4857--4874},
+  year = {2024},
+  doi = {10.21037/tcr-24-1974},
+  url = {https://doi.org/10.21037/tcr-24-1974},
+  publisher = {AME Publishing Company},
+  issn = {2219-6771},
+  }
 
 
 
 
-@Article{Choudhary2001,
-  author  = {Choudhary, J. S. and Blackstock, W. P. and Creasy, D. M. and Cottrell, J. S.},
-  title   = {Interrogating the human genome using uninterpreted mass spectrometry data},
-  journal = {Proteomics},
-  year    = {2001},
-  volume  = {1},
-  number  = {5},
-  pages   = {651--667},
-  doi     = {10.1002/1615-9861(200105)1:5<651::AID-PROT651>3.0.CO;2-B}
-}
+
 
 @Article{Wang2013,
   author  = {Wang, X. and Zhang, B.},
@@ -523,14 +486,16 @@ The identification of these additional sequences suggests that the "dark proteom
 }
 
 @Article{NCOR1_PMC,
-  author  = {Mottis, A. and others},
-  title   = {NCOR1: a key regulator of metabolism and disease},
-  journal = {Journal of Clinical Investigation},
-  year    = {2013},
-  volume  = {123},
-  number  = {11},
-  pages   = {4557--4563},
-  doi     = {10.1172/JCI70540}
+  author  = {Geiger, M. A. and Guillaumon, A. T. and Paneni, F. and Matter, C. M. and Stein, S.},
+  title   = {Role of the Nuclear Receptor Corepressor 1 (NCOR1) in Atherosclerosis and Associated Immunometabolic Diseases},
+  journal = {Frontiers in Immunology},
+  year    = {2020},
+  volume  = {11},
+  pages   = {569358},
+  doi     = {10.3389/fimmu.2020.569358},
+  url     = {https://www.frontiersin.org/articles/10.3389/fimmu.2020.569358/full},
+  pmid    = {33117357},
+  pmcid   = {PMC7578257}
 }
 
 @Misc{UniprotQ5T4S7,
@@ -622,7 +587,7 @@ The identification of these additional sequences suggests that the "dark proteom
   journal = {arXiv},
   year = {2014},
   volume = {abs/1407.6519},
-  note = {Discusses challenges in interpreting isotopic envelopes in isobaric (e.g., TMT) labelled proteomics data including monoisotopic peak estimation and misassignment},
+  note = {Accessed: 2025-12-26},
   url = {https://arxiv.org/abs/1407.6519}
 }
 
@@ -698,16 +663,19 @@ The identification of these additional sequences suggests that the "dark proteom
   doi     = {10.1038/nature18003}
 }
 
-@Article{Li2025,
-  author  = {Li, X. and Wang, Y. and Zhang, L. and others},
-  title   = {Unveiling the Role of Protein Posttranslational Modifications in Glioma Progression and Prognosis},
-  journal = {Frontiers in Oncology},
+
+@Article{Jiang2025,
+  author  = {Jiang, Z. and Huang, H. and Guo, Y. and Wang, Z. and Huang, H. and Yin, W. and Huang, H. and Wang, L. and Liu, W. and Jiang, X. and Ren, C.},
+  title   = {Unveiling the Role of Protein Posttranslational Modifications in Glioma Prognosis},
+  journal = {CNS Neuroscience \& Therapeutics},
   year    = {2025},
-  volume  = {15},
-  pages   = {1208--1210},  % approximiert aus Kontext
-  doi     = {10.3389/fonc.2025.XXXXX},
-  url     = {https://pmc.ncbi.nlm.nih.gov/articles/PMC11911106/},
-  pmid    = {40090864}
+  volume  = {31},
+  number  = {3},
+  pages   = {e70330},
+  doi     = {10.1111/cns.70330},
+  url     = {https://onlinelibrary.wiley.com/doi/10.1111/cns.70330},
+  pmid    = {40090864},
+  pmcid   = {PMC11911106}
 }
 
 
