--- a/components/abbreviations.tex
+++ b/components/abbreviations.tex
@@ -12,11 +12,12 @@
     \textbf{z}               & charge state \\
     \textbf{K}               & Lysine residue (single-letter code K; e.g., K[+229.163]) \\
     \textbf{GlyGly}          & diglycine remnant (appears as GlyGly for ubiquitination) \\
-    \textbf{Modanovo}        & model name / variant (proper name) \\
-    \textbf{Casanovo}        & baseline transformer model reference (proper name) \\
+    \textbf{Casanovo}        & state of the art de novo peptide sequencing transformer model \\
+    
+    \textbf{Modanovo}        & state of the art de novo peptide sequencing transformer model with focus on PTMs \\
     \textbf{bp / bases}      & base pairs / bases \\
     \textbf{DNPS}            & De Novo Peptide Sequencing \\
-    \textbf{MQ}              & MaxQuant (database search software) \\
+    \textbf{MQ}              & MaxQuant (database search engine) \\
     \textbf{VEP}             & Variant Effect Predictor \\
     \textbf{SAAVs}           & Single Amino Acid Variant(s) \\
     \textbf{MS}              & Mass Spectrometry \\
