--- a/components/kurzzusammenfassung.tex
+++ b/components/kurzzusammenfassung.tex
@@ -9,6 +9,6 @@ Die Massenspektrometrie (MS)-basierte Proteomik ist ein essenzielles Werkzeug in
 
 In dieser Arbeit wird eine Adaption des Transformer-basierten Modells Modanovo vorgestellt, um die Lücke zwischen De-novo-Sequenzierung und TMT-Multiplexing zu schließen. Durch die Erweiterung des Vokabulars um TMT-spezifische Tokens und die Integration eines Kovariaten-Embeddings für den TMT-Status wurde das Modell darauf trainiert, die chemischen Signaturen der Markierung explizit zu berücksichtigen. Das Fine-Tuning erfolgte auf einem umfassenden Datensatz, bestehend aus 82 Prozent TMT-markierten Multi-PTM-Spektren und einem 18 prozentigen „Replay-Set“ aus ungelabelten Daten, um "catastrophic forgetting" zu verhindern.
 
-Die Ergebnisse auf dem Testdatensatz zeigen eine robuste Performance mit einer "Area Under the Precision-Coverage Curve" (AUPCC) von 0,89 für TMT-Daten. Eine iterative Hyperparameter-Optimierung, insbesondere die Erweiterung des Isotopenfehlerspektrums und die Nutzung einer Beam-Search-Größe von 5, erwies sich als entscheidend für den Umgang mit der erhöhten spektralen Komplexität.
+Die Ergebnisse auf dem Testdatensatz zeigen eine robuste Performance mit einer "Area Under the Precision-Coverage Curve" (AUPCC) von 0,89 für TMT-Daten. Eine iterative Hyperparameter-Optimierung, insbesondere die Erweiterung des Toleranzbereichs für Isotopenfehler und die Nutzung einer Beam-Search-Größe von 5, erwies sich als entscheidend für den Umgang mit der erhöhten spektralen Komplexität.
 
-Angewendet auf einen unabhängigen Gliom-TMT-Datensatz mit 6,48 Millionen Spektren, konnte das Modell  den Anteil an identifizierten Spektren erweitern. Im Vergleich zu MaxQuant identifizierte der De-novo-Ansatz 40.000 zusätzliche einzigartige Peptide und lieferte hochkonfidente Sequenzvorschläge für über 670.000 zuvor nicht identifizierte Spektren. Zu den biologischen Highlights zählen die Identifizierung von 694 genomisch validierten SNPs sowie der Nachweis der Phosphorylierung an Serin 15 von PYGL – einem zentralen Stoffwechselregulator für das Überleben von Tumorzellen unter Hypoxie. Diese Arbeit zeigt, dass die Integration von TMT-spezifischem Wissen in Transformer-Modelle das „dunkle Proteom“ klinischer Proben erschließt und eine skalierbare Plattform für die personalisierte Proteogenomik bietet.
+Angewendet auf einen unabhängigen Gliom-TMT-Datensatz mit 6,48 Millionen Spektren, konnte das Modell  den Anteil an identifizierten Spektren erweitern. Im Vergleich zu MaxQuant identifizierte der De-novo-Ansatz 40.000 zusätzliche einzigartige Peptide und lieferte hochkonfidente Sequenzvorschläge für über 670.000 zuvor nicht identifizierte Spektren. Zu den biologischen Highlights zählen die Identifizierung von 694 variant peptiden mit zugehoerigen genomisch validierten SNPs sowie der Nachweis der Phosphorylierung an Serin 15 von PYGL – einem zentralen Stoffwechselregulator für das Überleben von Tumorzellen unter Hypoxie. Diese Arbeit zeigt, dass die Integration von TMT-spezifischem Wissen in Transformer-Modelle das „dunkle Proteom“ klinischer Proben erschließt und eine skalierbare Plattform für die personalisierte Proteogenomik bietet.
