--- a/components/abstract.tex
+++ b/components/abstract.tex
@@ -8,10 +8,10 @@
 \begin{center}
 {\large \bf Abstract}
 \end{center}
-Mass spectrometry (MS)-based proteomics is an essential tool in clinical cancer research, providing functional insights into tumor mechanisms that extend beyond genomic data. While database-driven identification strategies remain the gold standard, they are inherently limited by a predefined search space, often overlooking rare post-translational modifications (PTMs) and single amino acids variations caused by genomic mutations. De novo peptide sequencing, particularly through modern deep learning architectures like Transformers, offers an unbiased alternative. However, these models currently struggle with Tandem Mass Tag (TMT) labeled data due to systematic mass shifts and altered fragmentation patterns.
+Mass spectrometry (MS)-based proteomics is an essential tool in clinical cancer research, providing functional insights into tumor mechanisms that extend beyond genomic data. While database-driven identification strategies remain the gold standard, they are inherently limited by a predefined search space, often overlooking rare post-translational modifications (PTMs) and single amino acid variations caused by genomic mutations. De novo peptide sequencing, particularly through modern deep learning architectures like Transformers, offers an unbiased alternative. However, these models currently struggle with Tandem Mass Tag (TMT) labeled data due to systematic mass shifts and altered fragmentation patterns.
 
 In this thesis, an adaptation of the Transformer-based model \textit{Modanovo} is presented to bridge the gap between de novo sequencing and TMT multiplexing. By expanding the vocabulary to include TMT-specific tokens and integrating a covariate embedding for TMT status, the model was trained to explicitly account for the chemical signatures of the label. Fine-tuning was performed on a comprehensive dataset consisting of 82\% TMT-labeled multi-PTM spectra and an 18\% "replay set" of unlabeled data to prevent catastrophic forgetting.
 
-The results on the test dataset demonstrate robust performance with an Area Under the Precision-Coverage Curve (AUPCC) of 0.89 for TMT data. Iterative hyperparameter optimization, specifically expanding the isotope error range and utilizing a beam search size of 5, proved crucial for managing increased spectral complexity.
+The results on the test dataset demonstrate robust performance with an Area Under the Precision-Coverage Curve (AUPCC) of 0.89 for TMT data. Iterative optimization of the preprocessing and decoding parameters, specifically expanding the isotope error range and utilizing a beam search size of 5, proved crucial for managing increased spectral complexity.
 
-Applied to an independent glioma TMT dataset comprising 6.48 million spectra, the model notably expanded the space of identified spectra. Compared to MaxQuant, the de novo approach identified 40,000 additional unique peptides and provided high-confidence sequence suggestions for over 670,000 previously unidentified spectra. Biological highlights include the identification of 694 genomically validated SNPs and the detection of phosphorylation at Serine 15 of PYGL, a key metabolic switch for tumor cell survival under hypoxia. This work demonstrates that integrating TMT-specific knowledge into Transformer models unlocks the "dark proteome" of clinical samples, offering a scalable platform for personalized proteogenomics.
+Applied to an independent glioma TMT dataset comprising 6.48 million spectra, the model notably expanded the space of identified spectra. Compared to MaxQuant, the de novo approach identified 40,000 additional unique peptides and provided high-confidence sequence suggestions for over 670,000 previously unidentified spectra. Biological highlights include the identification of 694 unique variant peptides corresponding to genomically validated SNPs and the detection of phosphorylation at Serine 15 of PYGL, a key metabolic switch for tumor cell survival under hypoxia. This work demonstrates that integrating TMT-specific knowledge into Transformer models unlocks the "dark proteome" of clinical samples, offering a scalable platform for personalized proteogenomics.
