--- a/components/acknowledgements.tex
+++ b/components/acknowledgements.tex
@@ -1,4 +1,3 @@
-
 \phantomsection
 
 
@@ -22,3 +21,5 @@ A special thanks goes to my colleagues and friends \textbf{Yanik Bruns}, \textbf
 I would also like to thank \textbf{Prof. Dr. Bernhard Küster}, \textbf{Cecilia Jensen}, and \textbf{Johanna Tüshaus} from the Küster Lab. Your profound biological expertise and the swift provision of the glioma datasets were crucial for the success of this research. Thank you for always being available for quick answers and valuable feedback.
 
 Finally, I want to thank my \textbf{family and friends}. Thank you for your endless mental support, for keeping me grounded, and for the hours spent proofreading this thesis. Your encouragement made this journey possible.
+
+Artificial Intelligence (AI) tools were utilized to support the creation of this thesis. This includes literature research using semantic search engines as well as linguistic refinement of manuscript drafts. The final content review, interpretation of data, and conclusions remain the sole responsibility of the author.
