--- a/components/settings.tex
+++ b/components/settings.tex
@@ -9,15 +9,25 @@
 %\ifoot[\footertext]{\footertext\thepage} % \footertext set in INFO.TEX
 %\setkomafont{pagehead}{\normalfont\rmfamily}
 %\setkomafont{pagenumber}{\normalfont\rmfamily}
-\usepackage[]{geometry}
+% Configure page geometry for two-sided (book) layout.
+% Ensure the binding offset / inner margin is on the correct side.
+\usepackage[twoside,bindingoffset=12mm,inner=3.5cm,outer=2.5cm,top=3cm,bottom=3cm]{geometry}
 
 \usepackage{fancyhdr}
 \renewcommand*{\footrulewidth}{0pt}
 \fancyhf{}
 
-\fancypagestyle{plain}{
+% Page style for front matter: centered roman numerals
+\fancypagestyle{frontplain}{
 \fancyhf{}
 \fancyfoot[C]{\roman{page}}
+\renewcommand{\headrulewidth}{0pt}
+}
+
+% Page style for main matter: page number in outer footer (left on even, right on odd)
+\fancypagestyle{main}{
+\fancyhf{}
+\fancyfoot[LE,RO]{\thepage}
 \renewcommand{\headrulewidth}{0pt}
 }
 
